add retour homepage

--- a/static_pages/app/views/static_pages/about.html.erb
+++ b/static_pages/app/views/static_pages/about.html.erb
@@ -7,3 +7,5 @@
     <li><%= link_to 'Quentin', super_man_path %></li>
     <li><%= link_to 'Alex', wonder_woman_path %></li>
 </ul>
+
+<p><%= link_to '<- Homepage', root_path %></p>
