app 2 in progress

--- a/app_with_backend/app/views/users/new.html.erb
+++ b/app_with_backend/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <p>Bienvenue sur la page de création d'utilisateurs !</p>
 
-<form action="" method="POST">
+<form action="/new" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     Ton nom d'utilisateur:</br>
     <input type="text" name="user_name"></br>
