--- a/app_with_backend/app/views/static_pages/home.html.erb
+++ b/app_with_backend/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 <h1>The Hacking project : Week 4 - Day 4</h1>
-<p>Bienvenue sur la page d'accueil</p>
-<p><%= link_to 'Créer un nouvel utilisateur', new_user_path %></p>
+<div>
+    <p>Bienvenue sur la page d'accueil</p>
+    <p>Merci de passer par ici mais cette homepage ne vous apportera pas grand chose...</p>
+    <p>Si ce n'est créer un utilisateur sur notre super site!</p>
+    <p>Pour vous inscrire, <%= link_to 'c\'est par ici', new_user_path %></p>
+</div>
