--- a/app_with_backend/app/assets/stylesheets/static_pages.scss
+++ b/app_with_backend/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html {
+    margin: auto;
+  }
+
+body{
+  font-family: Arial, sans-serif;
+}
+
+h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    font-size: 2em;
+  }
+
+div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1,2em;
+    margin-top: 150px;
+
+  }
+  
