--- a/app_with_backend/app/views/static_pages/home.html.erb
+++ b/app_with_backend/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
-<h1>The Hacking project : Week 4 - Day 4</h1>
-<div>
+<h1 class="hometitle">The Hacking project : Week 4 - Day 4</h1>
+<div class="homepage">
     <p>Bienvenue sur la page d'accueil</p>
     <p>Merci de passer par ici mais cette homepage ne vous apportera pas grand chose...</p>
     <p>Si ce n'est créer un utilisateur sur notre super site!</p>
