--- a/app_with_backend/app/views/users/new.html.erb
+++ b/app_with_backend/app/views/users/new.html.erb
@@ -1,16 +1,17 @@
-<p>Bienvenue sur la page de création d'utilisateurs !</p>
+<h1 class ="new_user">Bienvenue sur la page de création d'utilisateurs !</h1>
 
-<form action="/new" method="post">
+<form class ="form" action="/new" method="post">
 
     <% if @user.errors.any? %>
         <div>
-            <%= pluralize(@user.errors.count, "Error") %> 
-            <p>Cet utilsateur ne peut pas être créé : </p>
-            <ul>
+            <% pluralize(@user.errors.count, "Error") %> 
+            <p class ="errors" >This username can't be registered : </p>
+            <ul class ="errors">
                 <% @user.errors.full_messages.each do |msg| %>
                     <% if msg == "Name is invalid" %>
-                        <li> <%= "Ne doit pas contenir d'espace ni de catactères spéciaux" %> </li>
-                    <% else %> <%= msg %>
+                        <li> <%= "Your Name can't contains whitespaces or special characters" %> </li>
+                    <% else %> 
+                    <li><%= msg %></li>
                     <% end %>
                 <% end %>
             </ul>
@@ -21,8 +22,8 @@
     Ton nom d'utilisateur:</br>
     <input type="text" name="user_name"></br>
     Quelques mots à propos de toi:</br>
-    <textarea name="bio"></textarea></br>
-    <input type="submit" value="Create">
+    <textarea placeholder="Dis nous qui tu es en quelques mots..." cols="40" rows="5"name="bio"></textarea></br>
+    <input class="summit" type="submit" value="Create">
 
 </form>
 
