--- a/static_pages/app/views/static_pages/contact.html.erb
+++ b/static_pages/app/views/static_pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Contact</h1>
-<p>Alex et Quentin</p>
+<h1 class ="hometitle">Contact</h1>
+<p>Team Atlantide</p>
+<p>Contactez-nous par email : <a href="mailto:apprendre.a.coder.gratuitement@gmail.com">Contact mail</a></address></p>
+<p class="link"><%= link_to '<- Homepage', root_path %></p>
+<p class="link"><%= link_to '<- About', about_path %></p>
