--- a/static_pages/app/views/static_pages/quentin.html.erb
+++ b/static_pages/app/views/static_pages/quentin.html.erb
@@ -1,4 +1,9 @@
-<h1>About</h1>
-<h2>Quentin</h2>
+<h1 class ="hometitle">About</h1>
+<h2 class ="hometitle2">Quentin</h2>
+<p class="bio">Hello! I like challenges. I walk 800km on foot during a summer.
+And despite the loneliness, mental and physical fatigue, and some long days, I kept going. I’m that person.
+Once I say I’ll do something, it will happen. I even pushed myself up to 1200km. My last one was to launch my side business.
+I'm now selling wooden and bamboo sunglasses at shinywood.fr, check it out!
+Follow me on Twitter : @BersonQuentin</p>
 <p><%= link_to 'Nous contacter', contact_path %></p>
-<p><%= link_to '<- About', about_path %></p>
+<p class="link"><%= link_to '<- About', about_path %></p>
