--- a/app_with_backend/app/assets/stylesheets/static_pages.scss
+++ b/app_with_backend/app/assets/stylesheets/static_pages.scss
@@ -10,21 +10,20 @@ body{
   font-family: Arial, sans-serif;
 }
 
-h1 {
+.hometitle {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
     font-size: 2em;
-  }
+}
 
-div {
+.homepage {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 1,2em;
     margin-top: 150px;
-
-  }
+}
   
