--- a/app_with_backend/app/views/users/show.html.erb
+++ b/app_with_backend/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1>Bienvenue <%= @user.name %></h1>
-<h2>Votre bio :</h2>
-<p><%= @user.bio %></p>
+<h1 class ="welcome">Bienvenue <%= @user.name %></h1>
+<h2 class="bio">Votre bio :</h2>
+<p class="user_bio"><%= @user.bio %></p>
