--- a/static_pages/app/assets/stylesheets/static_pages.scss
+++ b/static_pages/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,71 @@
-// Place all the styles related to the static_pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+html {
+    margin: auto;
+  }
+
+body{
+  font-family: Arial, sans-serif;
+}
+
+.hometitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    font-size: 3em;
+  }
+
+.hometitle2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    font-size: 2em;
+}
+
+.hometitle3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    font-size: 1.5em;
+}
+
+.homepage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1,2em;
+    margin-top: 150px;
+}
+
+p {
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    align-items: center;
+}
+
+.bio {
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: justify;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    align-items: center;
+}
+
+.link {
+    margin: 30px;
+    align-items: flex-start
+}
+  
