--- a/static_pages/app/views/static_pages/about.html.erb
+++ b/static_pages/app/views/static_pages/about.html.erb
@@ -1,12 +1,14 @@
-<h1>About</h1>
+<h1 class ="hometitle">About</h1>
 <p>Projet réalisé dans le cadre de The Hacking Project, Week 4 - Day 4</p>
-<h2>Notre groupe</h2>
-<p>Notre groupe est composé de Salma, Alex, Abdel et Quentin. Ce projet a été fait en Pair programming par Quentin et Alex. </p>
-<h3>Qui sommes nous ?</h3>
+<h2 class ="hometitle2">Notre groupe</h2>
+<p>Notre groupe est composé de Salma, Alex, Abdel et Quentin. </br>Ce projet a été fait en Pair programming par Quentin et Alex. </p>
+<h3 class ="hometitle3">Qui sommes nous ?</h3>
 <ul>
     <li><%= link_to 'Notre Groupe', justice_league_path %></li>
     <li><%= link_to 'Quentin', super_man_path %></li>
     <li><%= link_to 'Alex', wonder_woman_path %></li>
 </ul>
+<h3 class ="hometitle3">Nous contacter</h3>
+<p><%= link_to 'Rendez-vous sur noter page contact', contact_path %></p>
 
-<p><%= link_to '<- Homepage', root_path %></p>
+<p class="link"><%= link_to '<- Homepage', root_path %></p>
