--- a/static_pages/app/views/static_pages/alex.html.erb
+++ b/static_pages/app/views/static_pages/alex.html.erb
@@ -1,7 +1,7 @@
-<h1>About</h1>
-<h2>Alex</h2>
-
+<h1 class ="hometitle">About</h1>
+<h2 class ="hometitle2">Alex</h2>
+<p class="bio">Après 6 ans d'étude entre la fac et l'école ainsi que quelques stages, j'ai travaillé 2 ans et demi chez Bnbsitter avant de me lancer dans l'aventure THP. Sinon, j'ai fait 8 ans de judo avec ma ceinture marron dans la poche et j'adore voyager. Les pays que j'ai préféré ? L'Australie, le Canada et le Vietnam! J'espère que t'as apprécié nos premières apps rails :).</p>
 <p><%= link_to 'Nous contacter', contact_path %></p>
-<p><%= link_to '<- About', about_path %></p>
+<p class="link"><%= link_to '<- About', about_path %></p>
 
 
