--- a/static_pages/app/views/static_pages/home.html.erb
+++ b/static_pages/app/views/static_pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Home</h1>
-<p>Bienvenu sur notre site!</p>
-
-<p><%= link_to 'À propos de nous', about_path %></p>
+<h1 class ="hometitle">Home</h1>
+<div class="homepage">
+    <p>Bienvenu sur notre site!</p>
+    <p><%= link_to 'À propos de nous', about_path %></p>
+</div>
