--- a/static_pages/app/views/static_pages/la-team.html.erb
+++ b/static_pages/app/views/static_pages/la-team.html.erb
@@ -1,25 +1,25 @@
-<h1>La dream team</h1>
+<h1 class ="hometitle">La dream team</h1>
 </br>
 </br>
-<h2>Salma</h2>
+<h2 class ="hometitle3">Salma</h2>
 <ul>
     <li>Son Slack : @Asak</li>
     <li><a href="https://github.com/Asakab">Son GitHub</a></li>
 </ul>
-<h2>Alexandra</h2>
+<h2 class ="hometitle3">Alexandra</h2>
 <ul>
     <li>Son Slack : @Alex</li>
     <li><a href="https://github.com/alexandradlg">Son GitHub</a></li>
 </ul>
-<h2>Abdel</h2>
+<h2 class ="hometitle3">Abdel</h2>
 <ul>
     <li>Son Slack : @Abdel</li>
     <li><a href="https://github.com/aitbali">Son GitHub</a></li>
 </ul>
-<h2>Quentin</h2>
+<h2 class ="hometitle3">Quentin</h2>
 <ul>
     <li>Son Slack : @Quentin</li>
     <li><a href="https://github.com/QUB-SPG">Son GitHub</a></li>
 </ul>
 
-<p><%= link_to '<- About', about_path %></p>
+<p class="link"><%= link_to '<- About', about_path %></p>
